[package]
name = "nuclear-router"
version = "0.0.2"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

license = "MIT"
description = "A simple and fast router"
repository = "https://github.com/Nugine/nuclear-router"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["http-router"]

http-router = ["http"]

[dependencies]
smallvec = "1.1"
regex = "1.3"
thiserror = "1.0"

http = { version = "0.2", optional = true }
