[package]
name = "nuclear-router"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

license = "MIT"
description = "A URL router library with focus on speed"
repository = "https://github.com/Nugine/nuclear-router"



[features]
default = ["http-router", "hyper-service"]

http-router = ["http"]
hyper-service = ["http-router", "hyper"]

[dependencies]
smallvec = "1.1"
thiserror = "1.0"

http = { version = "0.2", optional = true }
hyper = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.3.1"
tokio = { version = "0.2.11", features = ["macros"] }

[[bench]]
name = "router"
harness = false
